--- a/index.html
+++ b/index.html
@@ -426,22 +426,37 @@
             line-height: 40px;
         }
 
-        .video-container {
+        .mockup-container {
             width: 517px;
             height: 517px;
+            background: #f5f5f5;
             border-radius: 40px;
-            overflow: hidden;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.12);
+            position: relative;
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
-        .video-container video {
+        .video-phone {
+            position: absolute;
+            top: 20.503%;
+            left: 20.503%;
+            right: 21.277%;
+            bottom: 0;
+            background: white;
+            border-radius: 24px 24px 0 0;
+            box-shadow: 0 6px 16px rgba(0,0,0,0.1);
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .video-phone video {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border-radius: 40px;
+            border-radius: 24px 24px 0 0;
         }
 
         /* Requirements Section */
@@ -942,11 +957,13 @@
                     </div>
                     <h3 class="step-title">1. Ingresa un monto</h3>
                 </div>
-                <div class="video-container">
-                    <video autoplay muted loop playsinline>
-                        <source src="./assets/images/asidesimples.mp4" type="video/mp4">
-                        Tu navegador no soporta el elemento video.
-                    </video>
+                <div class="mockup-container">
+                    <div class="video-phone">
+                        <video autoplay muted loop playsinline>
+                            <source src="./assets/images/asidesimples.mp4" type="video/mp4">
+                            Tu navegador no soporta el elemento video.
+                        </video>
+                    </div>
                 </div>
             </div>
         </div>
