--- a/index.html
+++ b/index.html
@@ -460,11 +460,10 @@
 
         .phone-overlay {
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 100%;
-            height: 100%;
+            top: 20.503%;
+            left: 20.503%;
+            right: 21.277%;
+            bottom: 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -473,10 +472,9 @@
         }
 
         .phone-overlay img {
-            width: auto;
+            width: 100%;
             height: 100%;
-            max-width: 100%;
-            object-fit: contain;
+            object-fit: fill;
         }
 
         /* Requirements Section */
