--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@
 
         .phone-overlay {
             position: absolute;
-            top: 20.503%;
-            left: 20.503%;
-            right: 21.277%;
-            bottom: 0;
+            top: 18%;
+            left: 18%;
+            right: 18%;
+            bottom: -2%;
             display: flex;
             align-items: center;
             justify-content: center;
