--- a/index.html
+++ b/index.html
@@ -439,9 +439,9 @@
 
         .video-phone {
             position: absolute;
-            top: 20.503%;
-            left: 20.503%;
-            right: 21.277%;
+            top: calc(20.503% - 2px);
+            left: calc(20.503% + 2px);
+            right: calc(21.277% - 2px);
             bottom: 0;
             border-radius: 24px 24px 0 0;
             overflow: hidden;
@@ -463,7 +463,7 @@
             top: 18%;
             left: 18%;
             right: 18%;
-            bottom: 2%;
+            bottom: 0.5%;
             display: flex;
             align-items: center;
             justify-content: center;
