--- a/index.html
+++ b/index.html
@@ -461,8 +461,8 @@
         .phone-overlay {
             position: absolute;
             top: 19%;
-            left: 19.5%;
-            right: 19.5%;
+            left: calc(19.5% + 2px);
+            right: calc(19.5% - 2px);
             bottom: 1%;
             display: flex;
             align-items: center;
