⬇️ DESCE 1PX: Move vídeo (-2px→-1px) e mockup (+1px) para baixo - ambos dentro do container

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
         .video-phone {
             position: absolute;
-            top: calc(20.503% - 2px);
+            top: calc(20.503% - 1px);
             left: calc(20.503% + 2px);
             right: calc(21.277% - 2px);
             bottom: 0;
@@ -460,7 +460,7 @@
 
         .phone-overlay {
             position: absolute;
-            top: 18%;
+            top: calc(18% + 1px);
             left: calc(18.5% + 2px);
             right: calc(18.5% - 2px);
             bottom: 0%;
