--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             top: calc(20.503% + 0px);
             left: calc(20.503% + 2px);
             right: calc(21.277% - 2px);
-            bottom: 0;
+            bottom: 1px;
             border-radius: 24px 24px 0 0;
             overflow: hidden;
             display: flex;
