🔍 BACKGROUND TRANSPARENTE: Remove background do video-phone para eliminar possível linha preta

--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@
             align-items: center;
             justify-content: center;
             z-index: 1;
+            background: transparent;
         }
 
         .video-phone video {
