🔍 RESET + ANTI-SOMBRA: Volta bottom=0 + adiciona border/outline/box-shadow: none no vídeo e container

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             top: calc(20.503% + 0px);
             left: calc(20.503% + 2px);
             right: calc(21.277% - 2px);
-            bottom: 5px;
+            bottom: 0;
             border-radius: 24px 24px 0 0;
             overflow: hidden;
             display: flex;
@@ -450,6 +450,7 @@
             justify-content: center;
             z-index: 1;
             background: transparent;
+            box-shadow: none;
         }
 
         .video-phone video {
@@ -457,6 +458,9 @@
             height: 100%;
             object-fit: cover;
             border-radius: 24px 24px 0 0;
+            border: none;
+            outline: none;
+            box-shadow: none;
         }
 
         .phone-overlay {
