Volta cor hero para original (preto)

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             line-height: 90px; /* Aumentado de 80px para 90px (+10px) */
             letter-spacing: -3.2px;
             margin-bottom: 16px;
-            color: red;
+            color: rgba(0,0,0,0.9);
             display: flex;
             flex-wrap: wrap;
             align-items: baseline;
