--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Pago - Créditos para Impulsar tu Negocio</title>
+    <link rel="icon" type="image/png" href="./assets/images/Header-Logo.png">
+    <link rel="shortcut icon" type="image/png" href="./assets/images/Header-Logo.png">
+    <link rel="apple-touch-icon" href="./assets/images/Header-Logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Proxima+Nova:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         * {
