🎨 FAVICON OFICIAL: Usando favicon SVG oficial do Mercado Pago do CDN

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Pago - Créditos para Impulsar tu Negocio</title>
-    <link rel="icon" type="image/png" href="./assets/images/Header-Logo.png">
-    <link rel="shortcut icon" type="image/png" href="./assets/images/Header-Logo.png">
-    <link rel="apple-touch-icon" href="./assets/images/Header-Logo.png">
+    <link rel="icon" type="image/svg+xml" href="https://http2.mlstatic.com/frontend-assets/mp-web-navigation/ui-navigation/6.7.73/mercadopago/favicon.svg">
+    <link rel="shortcut icon" type="image/svg+xml" href="https://http2.mlstatic.com/frontend-assets/mp-web-navigation/ui-navigation/6.7.73/mercadopago/favicon.svg">
+    <link rel="apple-touch-icon" href="https://http2.mlstatic.com/frontend-assets/mp-web-navigation/ui-navigation/6.7.73/mercadopago/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Proxima+Nova:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         * {
