🎨 CORES CORRETAS: Azul escuro #2968C8, médio #3483FA, claro mantido

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
         /* Botão fazendo loader (azul médio) */
         .step-tab.loading {
-            background: rgba(52, 131, 250, 0.4);
+            background: #3483FA;
             position: relative;
         }
 
@@ -445,7 +445,7 @@
             left: 0;
             width: var(--progress, 0%);
             height: 100%;
-            background: #3483fa;
+            background: #2968C8;
             border-radius: 48px;
             transition: width 0.2s ease;
             z-index: 1;
@@ -455,7 +455,7 @@
             position: relative;
             z-index: 2;
             transition: filter 0.3s ease;
-            filter: brightness(0) saturate(100%) invert(24%) sepia(89%) saturate(1847%) hue-rotate(213deg) brightness(99%) contrast(95%);
+            filter: brightness(0) invert(1);
         }
 
         /* Ícone fica branco quando o loader passa de 50% */
