⚪ ÍCONE BRANCO: Garante ícone branco em fundos azul médio e azul escuro

--- a/index.html
+++ b/index.html
@@ -458,7 +458,8 @@
             filter: brightness(0) invert(1);
         }
 
-        /* Ícone fica branco quando o loader passa de 50% */
+        /* Ícone sempre branco no loading (tanto azul médio quanto azul escuro) */
+        .step-tab.loading .step-icon-svg,
         .step-tab.loading.icon-white .step-icon-svg {
             filter: brightness(0) invert(1);
         }
