--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             height: 100%;
             background: #2968C8;
             border-radius: 0;
-            transition: width 0.2s ease;
+            transition: width 0.05s linear;
             z-index: 1;
         }
 
