--- a/index.html
+++ b/index.html
@@ -727,6 +727,128 @@
             background-position: center;
         }
 
+        /* Reputation indicator styles */
+        .requirements__reputation-indicator {
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+            opacity: 0;
+            transform: translateY(20px) scale(0.8);
+            transition: all 0.3s ease;
+        }
+
+        .reputation-card {
+            position: relative;
+        }
+
+        .reputation-card__indicator {
+            position: relative;
+            width: 80px;
+            height: 80px;
+        }
+
+        .reputation-card__segments {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            overflow: hidden;
+            display: flex;
+        }
+
+        .reputation-card__segment {
+            flex: 1;
+            height: 100%;
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 0.4s ease;
+        }
+
+        .reputation-card__segment--red {
+            background: #ff4757;
+            border-radius: 40px 0 0 40px;
+        }
+
+        .reputation-card__segment--yellow {
+            background: #ffa502;
+        }
+
+        .reputation-card__segment--green {
+            background: #2ed573;
+            border-radius: 0 40px 40px 0;
+        }
+
+        .reputation-card__indicator-circle {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            width: 50px;
+            height: 50px;
+            background: #2ed573;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: transform 0.5s ease;
+        }
+
+        .reputation-card__checkmark {
+            opacity: 0;
+            transform: scale(0.5);
+            transition: all 0.3s ease 0.2s;
+        }
+
+        .reputation-card__star-glow {
+            position: absolute;
+            top: -10px;
+            right: -10px;
+            opacity: 0;
+            transform: rotate(0deg) scale(0);
+            transition: all 0.6s ease;
+        }
+
+        /* Hover animations for card2 */
+        .requirement-card.card2:hover .requirements__reputation-indicator {
+            opacity: 1;
+            transform: translateY(0) scale(1);
+        }
+
+        .requirement-card.card2:hover .reputation-card__segment {
+            transform: scaleX(1);
+        }
+
+        .requirement-card.card2:hover .reputation-card__segment--red {
+            transition-delay: 0.1s;
+        }
+
+        .requirement-card.card2:hover .reputation-card__segment--yellow {
+            transition-delay: 0.2s;
+        }
+
+        .requirement-card.card2:hover .reputation-card__segment--green {
+            transition-delay: 0.3s;
+        }
+
+        .requirement-card.card2:hover .reputation-card__indicator-circle {
+            transform: translate(-50%, -50%) scale(1);
+            transition-delay: 0.4s;
+        }
+
+        .requirement-card.card2:hover .reputation-card__checkmark {
+            opacity: 1;
+            transform: scale(1);
+            transition-delay: 0.6s;
+        }
+
+        .requirement-card.card2:hover .reputation-card__star-glow {
+            opacity: 1;
+            transform: rotate(180deg) scale(1);
+            transition-delay: 0.7s;
+        }
+
         /* FAQ Section */
         .faq {
             padding: 80px 0;
