--- a/index.html
+++ b/index.html
@@ -727,24 +727,35 @@
             background-position: center;
         }
 
-        /* Reputation indicator styles */
+        /* Reputation indicator styles - Figma reference */
         .requirements__reputation-indicator {
             position: absolute;
             bottom: 20px;
+            left: 20px;
             right: 20px;
             opacity: 0;
-            transform: translateY(20px) scale(0.8);
-            transition: all 0.3s ease;
+            transform: translateY(20px);
+            transition: all 0.4s ease;
         }
 
         .reputation-card {
-            position: relative;
+            background: rgba(255, 255, 255, 0.12);
+            backdrop-filter: blur(4.6px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 12px;
+            padding: 16px;
+            display: flex;
+            align-items: center;
+            gap: 20px;
         }
 
         .reputation-card__indicator {
             position: relative;
-            width: 80px;
-            height: 80px;
+            flex: 1;
+            height: 8px;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 20px;
+            overflow: hidden;
         }
 
         .reputation-card__segments {
@@ -753,67 +764,78 @@
             left: 0;
             width: 100%;
             height: 100%;
-            border-radius: 50%;
-            overflow: hidden;
             display: flex;
+            border-radius: 20px;
+            overflow: hidden;
         }
 
         .reputation-card__segment {
-            flex: 1;
             height: 100%;
             transform: scaleX(0);
             transform-origin: left;
-            transition: transform 0.4s ease;
+            transition: transform 0.5s ease;
         }
 
         .reputation-card__segment--red {
-            background: #ff4757;
-            border-radius: 40px 0 0 40px;
+            background: #F23D4F;
+            width: 30%;
+            border-radius: 20px 0 0 20px;
         }
 
         .reputation-card__segment--yellow {
-            background: #ffa502;
+            background: #FFCE52;
+            width: 40%;
         }
 
         .reputation-card__segment--green {
-            background: #2ed573;
-            border-radius: 0 40px 40px 0;
+            background: #00A650;
+            width: 30%;
+            border-radius: 0 20px 20px 0;
         }
 
         .reputation-card__indicator-circle {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) scale(0);
-            width: 50px;
-            height: 50px;
-            background: #2ed573;
+            width: 24px;
+            height: 24px;
+            background: #00A650;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            transition: transform 0.5s ease;
+            opacity: 0;
+            transform: scale(0);
+            transition: all 0.4s ease;
+            flex-shrink: 0;
         }
 
         .reputation-card__checkmark {
             opacity: 0;
             transform: scale(0.5);
-            transition: all 0.3s ease 0.2s;
+            transition: all 0.3s ease;
+        }
+
+        .reputation-card__checkmark svg {
+            width: 14px;
+            height: 14px;
         }
 
         .reputation-card__star-glow {
             position: absolute;
-            top: -10px;
-            right: -10px;
+            top: -5px;
+            right: -5px;
             opacity: 0;
-            transform: rotate(0deg) scale(0);
-            transition: all 0.6s ease;
+            transform: scale(0);
+            transition: all 0.5s ease;
+        }
+
+        .reputation-card__star-glow svg {
+            width: 20px;
+            height: 20px;
         }
 
         /* Hover animations for card2 */
         .requirement-card.card2:hover .requirements__reputation-indicator {
             opacity: 1;
-            transform: translateY(0) scale(1);
+            transform: translateY(0);
         }
 
         .requirement-card.card2:hover .reputation-card__segment {
@@ -821,32 +843,33 @@
         }
 
         .requirement-card.card2:hover .reputation-card__segment--red {
-            transition-delay: 0.1s;
-        }
-
-        .requirement-card.card2:hover .reputation-card__segment--yellow {
             transition-delay: 0.2s;
         }
 
+        .requirement-card.card2:hover .reputation-card__segment--yellow {
+            transition-delay: 0.4s;
+        }
+
         .requirement-card.card2:hover .reputation-card__segment--green {
-            transition-delay: 0.3s;
+            transition-delay: 0.6s;
         }
 
         .requirement-card.card2:hover .reputation-card__indicator-circle {
-            transform: translate(-50%, -50%) scale(1);
-            transition-delay: 0.4s;
+            opacity: 1;
+            transform: scale(1);
+            transition-delay: 0.8s;
         }
 
         .requirement-card.card2:hover .reputation-card__checkmark {
             opacity: 1;
             transform: scale(1);
-            transition-delay: 0.6s;
+            transition-delay: 1s;
         }
 
         .requirement-card.card2:hover .reputation-card__star-glow {
             opacity: 1;
-            transform: rotate(180deg) scale(1);
-            transition-delay: 0.7s;
+            transform: scale(1);
+            transition-delay: 1.2s;
         }
 
         /* FAQ Section */
