🎯 POSIÇÃO FIGMA: Indicador centro-direita com layout e animação exatos da referência

--- a/index.html
+++ b/index.html
@@ -730,81 +730,109 @@
         /* Reputation indicator styles - Figma reference */
         .requirements__reputation-indicator {
             position: absolute;
-            bottom: 20px;
-            left: 20px;
-            right: 20px;
+            top: 50%;
+            right: 60px;
+            transform: translateY(-50%) scale(0.8);
             opacity: 0;
-            transform: translateY(20px);
             transition: all 0.4s ease;
+            width: 242px;
+            height: 80px;
         }
 
         .reputation-card {
             background: rgba(255, 255, 255, 0.12);
             backdrop-filter: blur(4.6px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(255, 255, 255, 1);
             border-radius: 12px;
             padding: 16px;
+            width: 100%;
+            height: 100%;
+            position: relative;
             display: flex;
             align-items: center;
-            gap: 20px;
+            justify-content: center;
         }
 
         .reputation-card__indicator {
             position: relative;
-            flex: 1;
-            height: 8px;
-            background: rgba(255, 255, 255, 0.2);
-            border-radius: 20px;
-            overflow: hidden;
+            width: 210px;
+            height: 10px;
+            display: flex;
+            gap: 5.5px;
         }
 
         .reputation-card__segments {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
+            position: relative;
+            flex: 1;
             height: 100%;
-            display: flex;
-            border-radius: 20px;
+            border-radius: 11px;
             overflow: hidden;
+            display: flex;
         }
 
         .reputation-card__segment {
+            position: absolute;
+            top: 0;
             height: 100%;
-            transform: scaleX(0);
-            transform-origin: left;
-            transition: transform 0.5s ease;
+            border-radius: 11px;
+            transition: all 0.5s ease;
         }
 
+        /* Base segments (background) */
         .reputation-card__segment--red {
             background: #F23D4F;
-            width: 30%;
-            border-radius: 20px 0 0 20px;
+            opacity: 0.3;
+            left: 0;
+            width: 33.33%;
         }
 
         .reputation-card__segment--yellow {
             background: #FFCE52;
-            width: 40%;
+            opacity: 0.3;
+            left: 33.33%;
+            width: 33.33%;
         }
 
         .reputation-card__segment--green {
             background: #00A650;
-            width: 30%;
-            border-radius: 0 20px 20px 0;
+            opacity: 0.1;
+            right: 0;
+            width: 33.34%;
+        }
+
+        /* Active segments (top layer) */
+        .reputation-card__segment--red-active {
+            background: #F23D4F;
+            opacity: 0.3;
+            left: 0;
+            width: 66px;
+            transform: scaleX(0);
+            transform-origin: left;
+        }
+
+        .reputation-card__segment--green-active {
+            background: #00A650;
+            opacity: 1;
+            right: 0;
+            width: 66px;
+            transform: scaleX(0);
+            transform-origin: right;
         }
 
         .reputation-card__indicator-circle {
-            width: 24px;
-            height: 24px;
+            position: absolute;
+            right: -35px;
+            top: 50%;
+            transform: translateY(-50%) scale(0);
+            width: 27px;
+            height: 27px;
             background: #00A650;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            opacity: 0;
-            transform: scale(0);
             transition: all 0.4s ease;
-            flex-shrink: 0;
+            overflow: hidden;
         }
 
         .reputation-card__checkmark {
@@ -814,62 +842,55 @@
         }
 
         .reputation-card__checkmark svg {
-            width: 14px;
-            height: 14px;
+            width: 15px;
+            height: 12px;
         }
 
         .reputation-card__star-glow {
             position: absolute;
-            top: -5px;
-            right: -5px;
+            top: -8px;
+            right: -8px;
             opacity: 0;
-            transform: scale(0);
+            transform: rotate(180deg) scale(0);
             transition: all 0.5s ease;
         }
 
         .reputation-card__star-glow svg {
-            width: 20px;
-            height: 20px;
+            width: 27px;
+            height: 27px;
         }
 
         /* Hover animations for card2 */
         .requirement-card.card2:hover .requirements__reputation-indicator {
             opacity: 1;
-            transform: translateY(0);
+            transform: translateY(-50%) scale(1);
         }
 
-        .requirement-card.card2:hover .reputation-card__segment {
+        .requirement-card.card2:hover .reputation-card__segment--red-active {
             transform: scaleX(1);
-        }
-
-        .requirement-card.card2:hover .reputation-card__segment--red {
             transition-delay: 0.2s;
         }
 
-        .requirement-card.card2:hover .reputation-card__segment--yellow {
+        .requirement-card.card2:hover .reputation-card__segment--green-active {
+            transform: scaleX(1);
             transition-delay: 0.4s;
         }
 
-        .requirement-card.card2:hover .reputation-card__segment--green {
-            transition-delay: 0.6s;
-        }
-
         .requirement-card.card2:hover .reputation-card__indicator-circle {
-            opacity: 1;
-            transform: scale(1);
-            transition-delay: 0.8s;
+            transform: translateY(-50%) scale(1);
+            transition-delay: 0.6s;
         }
 
         .requirement-card.card2:hover .reputation-card__checkmark {
             opacity: 1;
             transform: scale(1);
-            transition-delay: 1s;
+            transition-delay: 0.8s;
         }
 
         .requirement-card.card2:hover .reputation-card__star-glow {
             opacity: 1;
-            transform: scale(1);
-            transition-delay: 1.2s;
+            transform: rotate(180deg) scale(1);
+            transition-delay: 1s;
         }
 
         /* FAQ Section */
@@ -1283,21 +1304,25 @@
                         <div class="reputation-card">
                             <div class="reputation-card__indicator">
                                 <div class="reputation-card__segments">
+                                    <!-- Base segments (background) -->
                                     <div class="reputation-card__segment reputation-card__segment--red"></div>
                                     <div class="reputation-card__segment reputation-card__segment--yellow"></div>
                                     <div class="reputation-card__segment reputation-card__segment--green"></div>
+                                    <!-- Active segments (animated) -->
+                                    <div class="reputation-card__segment reputation-card__segment--red-active"></div>
+                                    <div class="reputation-card__segment reputation-card__segment--green-active"></div>
                                 </div>
                                 <div class="reputation-card__indicator-circle">
                                     <div class="reputation-card__checkmark">
-                                        <svg aria-hidden="true" width="32" height="32" viewBox="0 0 32 32" fill="white">
+                                        <svg aria-hidden="true" width="15" height="12" viewBox="0 0 32 32" fill="white">
                                             <path d="M13.5757 18.7915L22.729 9.63818L24.7861 11.6952L13.5757 22.9056L7.21387 16.5437L9.27091 14.4867L13.5757 18.7915Z" fill="white"></path>
                                         </svg>
                                     </div>
                                 </div>
                                 <div class="reputation-card__star-glow">
-                                    <svg width="40" height="41" viewBox="0 0 40 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <svg width="27" height="27" viewBox="0 0 40 41" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <g filter="url(#filter0_f_5975_1553)">
-                                            <path d="M17.0486 6.89765C17.575 3.87019 21.9211 3.87018 22.4475 6.89765L22.5596 7.54258C22.9039 9.52279 25.1923 10.4707 26.8359 9.3139L27.3713 8.93715C29.8842 7.16859 32.9574 10.2418 31.1888 12.7547L30.8121 13.29C29.6553 14.9337 30.6032 17.2221 32.5834 17.5664L33.2283 17.6785C36.2558 18.2049 36.2558 22.551 33.2283 23.0774L32.5834 23.1895C30.6032 23.5338 29.6553 25.8222 30.8121 27.4658L31.1888 28.0012C32.9574 30.5141 29.8842 33.5873 27.3713 31.8187L26.8359 31.442C25.1923 30.2852 22.9039 31.2331 22.5596 33.2133L22.4475 33.8582C21.9211 36.8857 17.575 36.8857 17.0486 33.8582L16.9365 33.2133C16.5922 31.2331 14.3038 30.2852 12.6602 31.442L12.1248 31.8187C9.61191 33.5873 6.53871 30.5141 8.30727 28.0011L8.68402 27.4658C9.84081 25.8222 8.89292 23.5338 6.9127 23.1895L6.26777 23.0774C3.2403 22.551 3.2403 18.2049 6.26777 17.6785L6.91269 17.5664C8.89291 17.2221 9.8408 14.9337 8.68402 13.29L8.30727 12.7547C6.53872 10.2418 9.6119 7.1686 12.1248 8.93715L12.6601 9.3139C14.3038 10.4707 16.5922 9.5228 16.9365 7.54258L17.0486 6.89765Z" fill="#D9D9D9"></path>
+                                            <path d="M17.0486 6.89765C17.575 3.87019 21.9211 3.87018 22.4475 6.89765L22.5596 7.54258C22.9039 9.52279 25.1923 10.4707 26.8359 9.3139L27.3713 8.93715C29.8842 7.16859 32.9574 10.2418 31.1888 12.7547L30.8121 13.29C29.6553 14.9337 30.6032 17.2221 32.5834 17.5664L33.2283 17.6785C36.2558 18.2049 36.2558 22.551 33.2283 23.0774L32.5834 23.1895C30.6032 23.5338 29.6553 25.8222 30.8121 27.4658L31.1888 28.0012C32.9574 30.5141 29.8842 33.5873 27.3713 31.8187L26.8359 31.442C25.1923 30.2852 22.9039 31.2331 22.5596 33.2133L22.4475 33.8582C21.9211 36.8857 17.575 36.8857 17.0486 33.8582L16.9365 33.2133C16.5922 31.2331 14.3038 30.2852 12.6602 31.442L12.1248 31.8187C9.61191 33.5873 6.53871 30.5141 8.30727 28.0011L8.68402 27.4658C9.84081 25.8222 8.89292 23.5338 6.9127 23.1895L6.26777 23.0774C3.2403 22.551 3.2403 18.2049 6.26777 17.6785L6.91269 17.5664C8.89291 17.2221 9.8408 14.9337 8.68402 13.29L8.30727 12.7547C6.53872 10.2418 9.6119 7.1686 12.1248 8.93715L12.6601 9.3139C14.3038 10.4707 16.5922 9.5228 16.9365 7.54258L17.0486 6.89765Z" fill="#FFCE52"></path>
                                         </g>
                                         <defs>
                                             <filter id="filter0_f_5975_1553" x="-0.00292969" y="0.626953" width="39.502" height="39.502" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
