--- a/index.html
+++ b/index.html
@@ -730,9 +730,8 @@
         /* Reputation indicator styles - Figma reference */
         .requirements__reputation-indicator {
             position: absolute;
-            top: 50%;
-            right: 60px;
-            transform: translateY(-50%);
+            bottom: 60px;
+            left: 60px;
             opacity: 1;
             width: 242px;
             height: 80px;
@@ -871,7 +870,7 @@
         }
 
         .requirement-card.card2:hover .reputation-card__indicator-circle {
-            transform: translateY(-50%) scale(1);
+            transform: scale(1);
             transition: transform 0.4s ease 0.6s;
         }
 
