--- a/index.html
+++ b/index.html
@@ -801,9 +801,18 @@
         /* Active segments (top layer) */
         .reputation-card__segment--red-active {
             background: #F23D4F;
-            opacity: 0.3;
+            opacity: 1;
             left: 0;
-            width: 66px;
+            width: 33.33%;
+            transform: scaleX(0);
+            transform-origin: left;
+        }
+
+        .reputation-card__segment--yellow-active {
+            background: #FFCE52;
+            opacity: 1;
+            left: 33.33%;
+            width: 33.33%;
             transform: scaleX(0);
             transform-origin: left;
         }
@@ -812,9 +821,9 @@
             background: #00A650;
             opacity: 1;
             right: 0;
-            width: 66px;
+            width: 33.34%;
             transform: scaleX(0);
-            transform-origin: right;
+            transform-origin: left;
         }
 
         .reputation-card__indicator-circle {
@@ -858,32 +867,37 @@
             height: 27px;
         }
 
-        /* Hover animations for card2 - only triggers animation */
+        /* Hover animations for card2 - progressive reputation animation */
         .requirement-card.card2:hover .reputation-card__segment--red-active {
             transform: scaleX(1);
-            transition: transform 0.5s ease 0.2s;
+            transition: transform 1s ease 0s;
+        }
+
+        .requirement-card.card2:hover .reputation-card__segment--yellow-active {
+            transform: scaleX(1);
+            transition: transform 1s ease 1s;
         }
 
         .requirement-card.card2:hover .reputation-card__segment--green-active {
             transform: scaleX(1);
-            transition: transform 0.5s ease 0.4s;
+            transition: transform 1s ease 2s;
         }
 
         .requirement-card.card2:hover .reputation-card__indicator-circle {
             transform: translateY(-50%) scale(1);
-            transition: transform 0.4s ease 0.6s;
+            transition: transform 0.5s ease 3s;
         }
 
         .requirement-card.card2:hover .reputation-card__checkmark {
             opacity: 1;
             transform: scale(1);
-            transition: all 0.3s ease 0.8s;
+            transition: all 0.3s ease 3.5s;
         }
 
         .requirement-card.card2:hover .reputation-card__star-glow {
             opacity: 1;
             transform: rotate(180deg) scale(1);
-            transition: all 0.5s ease 1s;
+            transition: all 0.5s ease 4s;
         }
 
 
@@ -1305,6 +1319,7 @@
                                     <div class="reputation-card__segment reputation-card__segment--green"></div>
                                     <!-- Active segments (animated) -->
                                     <div class="reputation-card__segment reputation-card__segment--red-active"></div>
+                                    <div class="reputation-card__segment reputation-card__segment--yellow-active"></div>
                                     <div class="reputation-card__segment reputation-card__segment--green-active"></div>
                                 </div>
                                 <div class="reputation-card__indicator-circle">
