--- a/index.html
+++ b/index.html
@@ -829,18 +829,35 @@
 
         .reputation-card__indicator-circle {
             position: absolute;
-            right: -35px;
             top: 50%;
-            transform: translateY(-50%) scale(0);
-            width: 27px;
-            height: 27px;
-            background: #00A650;
+            left: 0;
+            transform: translateY(-50%);
+            width: 30px;
+            height: 30px;
+            background: #F23D4F;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             transition: all 0.4s ease;
-            overflow: hidden;
+            overflow: visible;
+            z-index: 10;
+        }
+
+        /* Smoke effect behind circle */
+        .reputation-card__indicator-circle::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 60px;
+            height: 60px;
+            background: radial-gradient(circle, rgba(0, 166, 80, 0.3) 0%, rgba(0, 166, 80, 0.1) 30%, transparent 70%);
+            border-radius: 50%;
+            opacity: 0;
+            z-index: -1;
+            transition: all 0.3s ease;
         }
 
         .reputation-card__checkmark {
@@ -884,15 +901,68 @@
             transition: transform 1s ease 2s;
         }
 
+        /* Progress circle keyframe animation */
+        @keyframes progressCircleMove {
+            0% {
+                left: 0;
+                background: #F23D4F;
+                transform: translateY(-50%) scale(1);
+            }
+            33% {
+                left: calc(33.33% - 15px);
+                background: #FFCE52;
+                transform: translateY(-50%) scale(1);
+            }
+            66% {
+                left: calc(66.67% - 15px);
+                background: #00A650;
+                transform: translateY(-50%) scale(1);
+            }
+            85% {
+                left: calc(100% - 30px);
+                background: #00A650;
+                transform: translateY(-50%) scale(1.3);
+            }
+            95% {
+                left: calc(100% - 30px);
+                background: #00A650;
+                transform: translateY(-50%) scale(1);
+            }
+            100% {
+                left: calc(100% - 30px);
+                background: #00A650;
+                transform: translateY(-50%) scale(1);
+            }
+        }
+
+        /* Smoke effect animation */
+        @keyframes smokeEffect {
+            0% {
+                opacity: 0;
+                transform: translate(-50%, -50%) scale(0.5);
+            }
+            50% {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1.2);
+            }
+            100% {
+                opacity: 0;
+                transform: translate(-50%, -50%) scale(1.5);
+            }
+        }
+
         .requirement-card.card2:hover .reputation-card__indicator-circle {
-            transform: translateY(-50%) scale(1);
-            transition: transform 0.5s ease 3s;
+            animation: progressCircleMove 3s ease forwards;
+        }
+
+        .requirement-card.card2:hover .reputation-card__indicator-circle::before {
+            animation: smokeEffect 0.8s ease 2.8s forwards;
         }
 
         .requirement-card.card2:hover .reputation-card__checkmark {
             opacity: 1;
             transform: scale(1);
-            transition: all 0.3s ease 3.5s;
+            transition: all 0.3s ease 3.2s;
         }
 
         .requirement-card.card2:hover .reputation-card__star-glow {
