✅ CHECKMARK: Maior (20px) e perfeitamente centralizado na bolinha 30px

--- a/index.html
+++ b/index.html
@@ -861,14 +861,20 @@
         }
 
         .reputation-card__checkmark {
+            position: relative;
+            width: 20px;
+            height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             opacity: 0;
             transform: scale(0.5);
             transition: all 0.3s ease;
         }
 
         .reputation-card__checkmark svg {
-            width: 15px;
-            height: 12px;
+            width: 20px;
+            height: 20px;
         }
 
         .reputation-card__star-glow {
@@ -915,6 +921,11 @@
             }
             66% {
                 left: calc(66.67% - 15px);
+                background: #00A650;
+                transform: translateY(-50%) scale(1);
+            }
+            75% {
+                left: calc(100% - 30px);
                 background: #00A650;
                 transform: translateY(-50%) scale(1);
             }
@@ -1395,8 +1406,8 @@
                                 </div>
                                 <div class="reputation-card__indicator-circle">
                                     <div class="reputation-card__checkmark">
-                                        <svg aria-hidden="true" width="15" height="12" viewBox="0 0 32 32" fill="white">
-                                            <path d="M13.5757 18.7915L22.729 9.63818L24.7861 11.6952L13.5757 22.9056L7.21387 16.5437L9.27091 14.4867L13.5757 18.7915Z" fill="white"></path>
+                                        <svg aria-hidden="true" width="20" height="20" viewBox="0 0 24 24" fill="none">
+                                            <path d="M9 16.17L4.83 12L3.41 13.41L9 19L21 7L19.59 5.59L9 16.17Z" fill="white" stroke="white" stroke-width="0.5"/>
                                         </svg>
                                     </div>
                                 </div>
