🐌 ÚLTIMO TRECHO: Desaceleração natural no final (66% → 85%)

--- a/index.html
+++ b/index.html
@@ -924,17 +924,22 @@
                 background: #00A650;
                 transform: translateY(-50%) scale(1);
             }
-            75% {
+            85% {
                 left: calc(100% - 30px);
                 background: #00A650;
                 transform: translateY(-50%) scale(1);
             }
-            85% {
+            88% {
                 left: calc(100% - 30px);
                 background: #00A650;
                 transform: translateY(-50%) scale(1.3);
             }
-            95% {
+            94% {
+                left: calc(100% - 30px);
+                background: #00A650;
+                transform: translateY(-50%) scale(1.3);
+            }
+            98% {
                 left: calc(100% - 30px);
                 background: #00A650;
                 transform: translateY(-50%) scale(1);
