--- a/index.html
+++ b/index.html
@@ -866,20 +866,17 @@
         .reputation-card__star-glow {
             position: absolute;
             top: 50%;
-            left: 50%;
+            left: calc(100% - 30px);
             transform: translate(-50%, -50%) scale(0);
             width: 36px;
             height: 36px;
             opacity: 0;
             z-index: -1;
             transition: all 0.3s ease;
-            border-radius: 50%;
-            background: radial-gradient(circle, 
-                rgba(255, 255, 255, 0.6) 0%, 
-                rgba(255, 255, 255, 0.3) 50%, 
-                rgba(255, 255, 255, 0.1) 80%, 
-                transparent 100%);
-            filter: blur(3px);
+            background-image: url('./assets/images/fumacinha.png');
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
         }
 
         /* Hover animations for card2 - progressive reputation animation */
