--- a/index.html
+++ b/index.html
@@ -832,8 +832,8 @@
             top: 50%;
             left: 0;
             transform: translateY(-50%);
-            width: 30px;
-            height: 30px;
+            width: 28px;
+            height: 28px;
             background: #F23D4F;
             border-radius: 50%;
             display: flex;
@@ -866,7 +866,7 @@
         .reputation-card__star-glow {
             position: absolute;
             top: 50%;
-            left: calc(100% - 15px);
+            left: calc(100% - 14px);
             transform: translate(-50%, -50%) scale(0);
             width: 36px;
             height: 36px;
@@ -913,27 +913,27 @@
                 transform: translateY(-50%) scale(1);
             }
             85% {
-                left: calc(100% - 30px);
+                left: calc(100% - 28px);
                 background: #00A650;
                 transform: translateY(-50%) scale(1);
             }
             88% {
-                left: calc(100% - 30px);
+                left: calc(100% - 28px);
                 background: #00A650;
                 transform: translateY(-50%) scale(1.3);
             }
             94% {
-                left: calc(100% - 30px);
+                left: calc(100% - 28px);
                 background: #00A650;
                 transform: translateY(-50%) scale(1.3);
             }
             98% {
-                left: calc(100% - 30px);
+                left: calc(100% - 28px);
                 background: #00A650;
                 transform: translateY(-50%) scale(1);
             }
             100% {
-                left: calc(100% - 30px);
+                left: calc(100% - 28px);
                 background: #00A650;
                 transform: translateY(-50%) scale(1);
             }
@@ -955,6 +955,19 @@
             opacity: 1;
             transform: translate(-50%, -50%) scale(1.1);
             transition: opacity 0.4s ease 2.94s, transform 0.4s ease 2.94s;
+            animation: smokeAppearDisappear 2.4s ease 2.94s forwards;
+        }
+
+        @keyframes smokeAppearDisappear {
+            0% {
+                opacity: 1;
+            }
+            83.33% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
         }
 
 
